--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
   <div id="dice1" class="dice">0</div>
   <div id="dice2" class="dice">0</div>
+  <div id="dice3" class="dice">0</div>
 
 <button onclick="rollDice()">PLAY!</button>
-
+<button id="cg" type="button" onclick="change">change</button>
 
 
   </div>
